--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -24,17 +24,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 10.142 ms\n",
+      "ptxas info    : Compile time = 9.470 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 424.099 ms\n",
+      "ptxas info    : Compile time = 491.731 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 376.053 ms\n",
+      "ptxas info    : Compile time = 416.637 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -51,17 +51,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.442 ms\n",
+      "ptxas info    : Compile time = 11.324 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 440.054 ms\n",
+      "ptxas info    : Compile time = 434.366 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 73.234 ms\n",
+      "ptxas info    : Compile time = 73.514 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -78,17 +78,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.524 ms\n",
+      "ptxas info    : Compile time = 8.438 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 427.415 ms\n",
+      "ptxas info    : Compile time = 447.649 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 73.751 ms\n",
+      "ptxas info    : Compile time = 74.398 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -133,7 +133,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 396 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.678 ms\n",
+      "ptxas info    : Compile time = 9.026 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 40\n",
@@ -165,22 +165,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.561 ms\n",
+      "ptxas info    : Compile time = 9.489 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.047 ms\n",
+      "ptxas info    : Compile time = 3.334 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 7.205 ms\n",
+      "ptxas info    : Compile time = 6.830 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 16.460 ms\n",
+      "ptxas info    : Compile time = 15.120 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -455,7 +455,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7ec2dd8d6340>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x754a784e5bc0>\n",
       "All tests passed.\n"
      ]
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
