Progress to symmetry

--- a/analysis/test_ga.ipynb
+++ b/analysis/test_ga.ipynb
@@ -2,117 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local\n",
-      "WARNING: CUDA MPS not active\n",
-      "init CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling kernel variant: crystal ===\n",
-      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.723 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 463.142 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 490.954 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 80\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1264\n",
-      "=== Compiling kernel variant: no_sep ===\n",
-      "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.059 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 436.101 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 78.173 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 64\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1232\n",
-      "=== Compiling kernel variant: sep ===\n",
-      "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.584 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 596.700 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 81.925 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 56\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 144\n",
-      "\n",
-      "--- Kernel: multi_boundary_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 43\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 240\n",
-      "\n",
-      "--- Kernel: multi_boundary_distance_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 36\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -135,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [],
@@ -145,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ffa7733e",
    "metadata": {},
    "outputs": [
@@ -581,21 +474,15 @@
     "import pack_ga3\n",
     "import pack_runner\n",
     "fastMode = False\n",
-    "kgs.debugging_mode = 2\n",
+    "kgs.debugging_mode = 1\n",
     "\n",
-    "for seed in range(10):\n",
+    "for seed in range(1):\n",
     "\n",
     "    runner = pack_ga3.baseline()\n",
-    "    runner.ga.ga_base.N_trees_to_do = 10\n",
-    "    runner.ga.do_legalize=False\n",
-    "    runner.ga.ga_base.do_legalize=False\n",
-    "    runner.n_generations = 30\n",
-    "    runner.diagnostic_plot = False\n",
+    "    runner.ga.ga_base.N_trees_to_do = 9\n",
+    "    runner.diagnostic_plot = True\n",
     "    runner.seed = seed\n",
     "    runner.plot_every = 10\n",
-    "\n",
-    "    runner.ga.diversity_reset_threshold = -1.\n",
-    "\n",
     "\n",
     "    runner.run()"
    ]
