--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -38,76 +38,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "32892a9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4,\n",
-       " 8,\n",
-       " 12,\n",
-       " 16,\n",
-       " 20,\n",
-       " 24,\n",
-       " 28,\n",
-       " 32,\n",
-       " 36,\n",
-       " 40,\n",
-       " 44,\n",
-       " 48,\n",
-       " 52,\n",
-       " 56,\n",
-       " 60,\n",
-       " 64,\n",
-       " 68,\n",
-       " 72,\n",
-       " 76,\n",
-       " 80,\n",
-       " 84,\n",
-       " 88,\n",
-       " 92,\n",
-       " 96,\n",
-       " 100,\n",
-       " 104,\n",
-       " 108,\n",
-       " 112,\n",
-       " 116,\n",
-       " 120,\n",
-       " 124,\n",
-       " 128,\n",
-       " 132,\n",
-       " 136,\n",
-       " 140,\n",
-       " 144,\n",
-       " 148,\n",
-       " 152,\n",
-       " 156,\n",
-       " 160,\n",
-       " 164,\n",
-       " 168,\n",
-       " 172,\n",
-       " 176,\n",
-       " 180,\n",
-       " 184,\n",
-       " 188,\n",
-       " 192,\n",
-       " 196,\n",
-       " 200]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x.item() for x in np.arange(4,201,4)]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "37e6e637",
    "metadata": {},
@@ -116,11 +46,10 @@
     "DO_CHECK = False\n",
     "\n",
     "# User inputs\n",
-    "# N_TREES_LIST: 36 and 48 first, then the rest in ascending order (excluding 36 and 48)\n",
-    "N_TREES_LIST = [36, 48] + [x.item() for x in np.arange(4, 201, 4) if x.item() not in (36, 48)]\n",
-    "N_PROCESSES = 2 if kgs.env=='local' else 3  # Maximum concurrent processes\n",
-    "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
-    "SEED_BASE = 88  # Base seed for reproducibility\n",
+    "N_TREES_LIST = [68] + [x.item() for x in np.arange(20, 101, 2)]\n",
+    "N_PROCESSES = 2 if kgs.env=='local' else 4  # Maximum concurrent processes\n",
+    "DIAGNOSTIC_INTERVAL = 10  # Seconds between diagnostic updates\n",
+    "SEED_BASE = 89  # Base seed for reproducibility\n",
     "\n",
     "# Derived inputs (edit manually to customize seeds per task)\n",
     "N_TREES_SEED_LIST = [(N, SEED_BASE) for N in N_TREES_LIST]\n",
@@ -134,7 +63,8 @@
     "import pack_ga3\n",
     "import pack_runner\n",
     "\n",
-    "base_runner = pack_ga3.baseline_symmetry_90()\n",
+    "base_runner = pack_ga3.baseline_symmetry_180()\n",
+    "base_runner.n_generations = 1000\n",
     "\n",
     "base_runner.ga.do_legalize = True\n",
     "base_runner.use_atomic_save = True  # Enable atomic saves for multiprocess safety\n",
