--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -49,7 +49,7 @@
     "os.makedirs(output_dir + 'full/', exist_ok=True)\n",
     "os.makedirs(output_dir + 'abbr/', exist_ok=True)\n",
     "\n",
-    "fast_mode = False  # Set to True for quick testing\n",
+    "fast_mode = True  # Set to True for quick testing\n",
     "which_runner = pack_runner.baseline_runner  # Which example runner to use\n",
     "n_parallel_processes = 1 if kgs.env=='local' else 4\n",
     "print(f\"Will use {n_parallel_processes} parallel processes\")"
