--- a/analysis/test_ga_runner.ipynb
+++ b/analysis/test_ga_runner.ipynb
@@ -23,17 +23,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.832 ms\n",
+      "ptxas info    : Compile time = 8.826 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 425.379 ms\n",
+      "ptxas info    : Compile time = 418.861 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 349.482 ms\n",
+      "ptxas info    : Compile time = 369.579 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -50,17 +50,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.519 ms\n",
+      "ptxas info    : Compile time = 8.501 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 401.642 ms\n",
+      "ptxas info    : Compile time = 453.856 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 69.742 ms\n",
+      "ptxas info    : Compile time = 70.499 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -77,17 +77,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.892 ms\n",
+      "ptxas info    : Compile time = 8.036 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 408.429 ms\n",
+      "ptxas info    : Compile time = 399.611 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 424 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 71.248 ms\n",
+      "ptxas info    : Compile time = 69.564 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -150,15 +150,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Cannot add new attribute 'diagnostic_plot' to frozen instance",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m runner.modifier_dict[\u001b[33m'\u001b[39m\u001b[33mconnectivity_pattern\u001b[39m\u001b[33m'\u001b[39m] = pack_runner.pm(\u001b[32m1\u001b[39m, \u001b[38;5;28;01mlambda\u001b[39;00m r:\u001b[32m1\u001b[39m, pack_runner.set_connectivity_pattern) \n\u001b[32m     12\u001b[39m runner.base_ga.ga.ga_base.N_trees_to_do = \u001b[32m68\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[43mrunner\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdiagnostic_plot\u001b[49m = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     14\u001b[39m runner.seed = \u001b[32m0\u001b[39m\n\u001b[32m     15\u001b[39m runner.plot_every = \u001b[32m10\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/kaggle_support.py:155\u001b[39m, in \u001b[36mBaseClass.__setattr__\u001b[39m\u001b[34m(self, key, value)\u001b[39m\n\u001b[32m    152\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, value):\n\u001b[32m    153\u001b[39m     \u001b[38;5;66;03m# If the object is frozen, prevent setting new attributes\u001b[39;00m\n\u001b[32m    154\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._is_frozen \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[32m--> \u001b[39m\u001b[32m155\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCannot add new attribute \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m to frozen instance\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    156\u001b[39m     \u001b[38;5;28msuper\u001b[39m().\u001b[34m__setattr__\u001b[39m(key, value)\n",
-      "\u001b[31mAttributeError\u001b[39m: Cannot add new attribute 'diagnostic_plot' to frozen instance"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add 4\n",
+      "{'seed': 0, 'reset_approach': 3, 'reset_check_generations': 100, 'diversity_reset_threshold': -1.0, 'scale_rough_iterations': 1.0, 'scale_fine_iterations': 1.0, 'connectivity_pattern': 1}\n",
+      "Loading cached lookup table from /mnt/d//packing/temp//lut_cache/exact_sep_Nx900_Ny900_Nt900_trimTrue_tree42d0f17d.lut_cache...\n"
      ]
     }
    ],
